docs: add robots.txt and improve 404 page with home button  [spi-011-final]

--- a/docs/404.md
+++ b/docs/404.md
@@ -1,3 +1,5 @@
 # Page not found
 
-The page you are looking for does not exist. Use the search box or go to the [home page](/).
+The page you are looking for does not exist. Use the search box or go back to the home page.
+
+[ :material-home: Back to Home ](index.md){ .md-button .md-button--primary }
